--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>About Me</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-
+<h1>Do I Know You?</h1>
+<script src="app.js"></script>
   </body>
 </html>
