working code_basic

--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
   <body>
 <h1>Do I Know You?</h1>
 <script src="app.js"></script>
-  </body>
+
+<h2> Countries I've Lived In</h2>
+  <ul>
+    <li>Germany</li>
+    <li>United States</li>
+    <li>Thailand</li>
+
 </html>
