--- a/index.html
+++ b/index.html
@@ -2,17 +2,21 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>About Me</title>
+    <title>Upgrading my About Me Page with Some CSS</title>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
 <h1>Do I Know You?</h1>
 <script src="app.js"></script>
 
+<p><img src="./images/Airborne.jpeg"/> </p>
 <h2> Countries I've Lived In</h2>
   <ul>
     <li>Germany</li>
     <li>United States</li>
     <li>Thailand</li>
+<p><img src="./images/Germany.jpeg"/></p>
+<p><img src="./images/US.jpeg"/></p>
+<p><img src="./images/Thailand.jpeg"/></p>
 
 </html>
